--- a/index.html
+++ b/index.html
@@ -11,8 +11,29 @@
 </head>
 
 <body>
-
-
+    <div class="row h-100 m-0 align-items-center">
+        <div class="col-12 mx-auto text-center">
+            <h1 class="mb-2 title">Countdown Clock</h1>
+            <div id="clock-div">
+                <div class="box">
+                    <span id="day">00</span>
+                    <div class="small-text">Days</div>
+                </div>
+                <div class="box">
+                    <span id="hour">00</span>
+                    <div class="small-text">Hours</div>
+                </div>
+                <div class="box">
+                    <span id="minute">00</span>
+                    <div class="small-text">Minutes</div>
+                </div>
+                <div class="box">
+                    <span id="second">00</span>
+                    <div class="small-text">Seconds</div>
+                </div>
+            </div>
+        </div>
+    </div>
     <script src="bootstrap-4.3.1-dist/jquery-3.3.1.js"></script>
     <script src="bootstrap-4.3.1-dist/bootstrap.bundle.js"></script>
     <script src="js/script.js"></script>
